--- a/_sass/utilities/_variables.scss
+++ b/_sass/utilities/_variables.scss
@@ -4,7 +4,7 @@
   */
 
 // Globals
-$font-stack: 'Source Sans Pro', sans-serif;
+$font-stack: 'Inter', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $font-size: 17px;
 $font-size-mobile: 15px;
 
